# Formf

./: .gitignore  ARCHITECTURE.md  LICENSE  README.md  TODOS.md  pyproject.toml  test.py  testfile.py
Core/: Field.py
Core/validators/: Regex.py  before.py  date.py
Docs/: ARCHITECTURE.md  TODOS.md
Engine/: __init__.py
Engine/Core/: Field.py  Form.py
Engine/Fields/: Bool.py  Date.py  Float.py  Integer.py  List.py  String.py  __init__.py
Engine/Formvalidators/: __init__.py
Engine/Validators/: BeforeDate.py  Bool.py  DateFormat.py  Equals.py  InList.py  NotInList.py
Engine/formvalidators/: __init__.py
Engine/validators/: AfterDatetime.py  BeforeDatetime.py  Choices.py  DateFormat.py  InList.py  Max.py  Min.py  NotEquals.py  NotInList.py  Uppercase.py  Url.py  __init__.py
Tests/: Test_Field.py  Test_Form.py
Tests/Validators/: Regex.py  Test_AfterDatetime.py  Test_BeforeDatetime.py  Test_Bool.py  Test_Choices.py  Test_DateFormat.py  Test_Email.py  Test_Equals.py  Test_InList.py  Test_Lowercase.py  Test_Max.py  Test_MaxLength.py  Test_Min.py  Test_MinLength.py  Test_NotEquals.py  Test_NotInList.py  Test_Pattern.py  Test_Uppercase.py
examples/: README.md
examples/crossfieldvalidators/: date_order_crossfieldvalidators.py  equals_crossfieldvalidator.py  mixed_crossfieldvalidators.py
examples/fields/: bool_field.py  date_field.py  float_field.py  integer_field.py  list_field.py  string_field.py
examples/formvalidators/: date_order_formvalidators.py  equals_formvalidator.py  mixed_formvalidators.py
examples/schema/: README.md  advanced_schema_export.py  (+1 more)
(+137 files in other folders)
