[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "Form-Engine"
version = "0.1.0"
description = "A modular Python form validation engine"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Fixed" }
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
dependencies = [
    "pytest>=9.0.2",
]

[project.optional-dependencies]
dev= ["pytest", "ruff"]

[tool.setuptools.packages.find]
where = ["src"]
